--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ h3 {
 */
 
 .vidage {
-        background-image: url("../images/fallback.jpg");
+        background-image: url("../images/fallback-2.png");
         /*background-color: red;*/
         background-position: center;
         background-size: cover;
