--- a/css/main.css
+++ b/css/main.css
@@ -514,7 +514,7 @@ h3 {
     -ms-touch-action: none;
     touch-action: none;
     background-color:rgba(255, 255, 255, 0.0);
-    background-image: url("../images/circle_arrows.svg");
+    background-image: url("../images/circle.svg");
     background-repeat: no-repeat;
     border: 0;
     left: -18px;
